--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Mateusz Ostalecki"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "3.2.5"
+psycopg2 = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 
