--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,9 @@ services:
     ports:
       - 8000:8000
     env_file: .env.dev
-    command: bash -c "python manage.py makemigrations
+    command: bash -c "chmod +x wait-for-db.sh
+      && ./wait-for-db.sh
+      && python manage.py makemigrations
       && python manage.py migrate --noinput
       && python manage.py runserver 0.0.0.0:8000"
 
