--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,8 @@ services:
     ports:
       - 8000:8000
     env_file: .env.dev
+    volumes:
+    - ./app:/app
     command: bash -c "chmod +x wait-for-db.sh
       && ./wait-for-db.sh
       && python manage.py makemigrations
