--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Mateusz Ostalecki"]
 python = "^3.8"
 Django = "3.2.5"
 psycopg2 = "^2.9.1"
+django-crispy-forms = "^1.12.0"
 
 [tool.poetry.dev-dependencies]
 
