--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 Django = "3.2.5"
 psycopg2 = "^2.9.1"
 django-crispy-forms = "^1.12.0"
+django-filter = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 
