--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -10,6 +10,8 @@ Django = "3.2.5"
 psycopg2 = "^2.9.1"
 django-crispy-forms = "^1.12.0"
 django-filter = "^2.4.0"
+djangorestframework = "^3.12.4"
+djangorestframework-camel-case = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
