--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -12,6 +12,7 @@ django-crispy-forms = "^1.12.0"
 django-filter = "^2.4.0"
 djangorestframework = "^3.12.4"
 djangorestframework-camel-case = "^1.2.0"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 
