--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -13,6 +13,8 @@ django-filter = "^2.4.0"
 djangorestframework = "^3.12.4"
 djangorestframework-camel-case = "^1.2.0"
 requests = "^2.25.1"
+pytest = "^6.2.4"
+pytest-django = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 
