--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework-camel-case = "^1.2.0"
 requests = "^2.25.1"
 pytest = "^6.2.4"
 pytest-django = "^4.4.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
